k8s/tavira-init-git.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tavira-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tavira
  template:
    metadata:
      labels:
        app: tavira
    spec:
      volumes:
        - name: app-code
          emptyDir: {}  # temporal en memoria para el Pod
        - name: nginx-config
          configMap:
            name: tavira-nginx-config
      containers:
        - name: php-fpm
          image: php:8.2-fpm
          workingDir: /var/www/html
          volumeMounts:
            - name: app-code
              mountPath: /var/www/html
          ports:
            - containerPort: 9000
        - name: nginx
          image: nginx:1.25
          volumeMounts:
            - name: app-code
              mountPath: /var/www/html
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
          ports:
            - containerPort: 80
