k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tavira-service
  labels:
    app: tavira-app
spec:
  type: ClusterIP
  selector:
    app: tavira-app
  ports:
    - port: 80
      targetPort: 9000
